--- a/html-css-kadai_013/style.css
+++ b/html-css-kadai_013/style.css
@@ -146,4 +146,8 @@ PC用のスタイル
     background-repeat: no-repeat;
     background-position: right top;
   }
+
+  .close {
+    background-color: #ce933e;
+  }
 }
